syntax = "proto3";

option csharp_namespace = "CommandService";

service GrpcCommand {
  rpc PublishPlatform (PublishPlatformRequest) returns (PublishPlatformResponse);
}

message GrpcPlatformModel {
  int32 platformId = 1;
  string name = 2;
  string publisher = 3;
}

message PublishPlatformRequest {
  GrpcPlatformModel platform = 1;
}

message PublishPlatformResponse {
}
